Assignment 2 - prepped and finalized by Monday morning.

--- a/Assignments/A01_Introduction.Rmd
+++ b/Assignments/A01_Introduction.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1: Introduction"
-author: "Student Name"
+author: "Abhay V Rao"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -22,21 +22,21 @@ The completed exercise is due on <>.
 
 1. What are your previous experiences with data analytics, R, and Git? Include both formal and informal training.
 
-> Answer: 
+> Answer: I have no previous experience with R or Git. I've used excel to process some simple data in the past, using basic formulae, graphs, and tools like PivotTables.
 
 2. Are there any components of the course about which you feel confident?
 
-> Answer: 
+> Answer: As I am very new to this domain, I'm choosing to be optimistic overall, about working hard at learning skills which will give me new perspectives to engage data with! 
 
 3. Are there any components of the course about which you feel apprehensive?
 
-> Answer: 
+> Answer: I have had some apprehensions arising from attempting to set up my old Mac for the course. Switching to a virtual machine has helped allay these concerns, to a large extent.
 
 
 ## 2) GitHub
 
 Provide a link below to your forked course repository in GitHub. Make sure you have pulled all recent changes from the course repository  and that you have updated your course README file. 
 
-> Answer: 
+> Answer: https://github.com/AbhayLearnsToCode/Environmental_Data_Analytics_2022
 
 
