--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 2: Coding Basics"
-author: "Student Name"
+author: "Abhay V Rao"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -32,10 +32,17 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 
 ```{r}
 #1. 
+risebyfour <- seq(1,100,4) 
+# created a sequence from 1 to 100, with an increment of four. 
 
 #2. 
+median(risebyfour)
+mean(risebyfour)
 
 #3. 
+mean(risebyfour)>median(risebyfour) 
+# querying if the mean is greater than the median for this sequence
+
 
 ```
 
@@ -50,21 +57,38 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 8. Label the columns of your data frame with informative titles.
 
 ```{r}
-
+# 5-8
+Students <- c("Adam", "Bob", "Charizard", "Dirk") 
+# creating a vector of character type
+Scores <-c(53,58,99,40) # creating a vector of numerical type
+Passed <- c(TRUE,TRUE,TRUE, FALSE) # creating a vector of logical type
+create_df<- data.frame("Name"=Students, "Score"=Scores,"Pass or Fail?"=Passed)
+print(create_df)
 ```
 
 9. QUESTION: How is this data frame different from a matrix?
 
-> Answer: 
+> Answer: This data frame differs from a matrix, 
+as it contains datasets of multiple types; matrices include data of one type.
 
 10. Create a function with an if/else statement. Your function should determine whether a test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. Hint: Use `print`, not `return`. The name of your function should be informative.
+
+```{r}
+Passing_Grade <- function(x) {
+  ifelse (x>50,TRUE,FALSE)
+}
+```
 
 11. Apply your function to the vector with test scores that you created in number 5. 
 
 ```{r}
-
+Results <- Passing_Grade(Scores)
+  print(Results) # the function renders results in the order of students. 
+create_df <- data.frame("Student"=Students, "Passed"=Results)
+print(create_df) # creating a data frame to visualize the results effectively.
 ```
 
 12. QUESTION: Which option of `if` and `else` vs. `ifelse` worked? Why?
 
 > Answer: 
+Ifelse worked for me: the 'if' option only considered the first element of the 'scores' data series that I'd created.
