--- a/Assignments/A03_DataExploration.Rmd
+++ b/Assignments/A03_DataExploration.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 3: Data Exploration"
-author: "Student Name, Section #0"
+author: "Abhay, Section #4"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -23,25 +23,44 @@ The completed exercise is due on <>.
 
 1. Check your working directory, load necessary packages (tidyverse), and upload two datasets: the ECOTOX neonicotinoid dataset (ECOTOX_Neonicotinoids_Insects_raw.csv) and the Niwot Ridge NEON dataset for litter and woody debris (NEON_NIWO_Litter_massdata_2018-08_raw.csv). Name these datasets "Neonics" and "Litter", respectively. **Be sure to add the `stringsAsFactors = TRUE` parameter to the function when reading in the CSV files.**
 ```{r,  message = FALSE}
+#
+getwd()
 
+#
+library(tidyverse)
+
+#
+Neonics <- read.csv("../Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv", 
+                    stringsAsFactors = TRUE)
+Litter <- read.csv("../Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv",
+                   stringsAsFactors = TRUE)
 ```
 
 ## Learn about your system
 
 2. The neonicotinoid dataset was collected from the Environmental Protection Agency's ECOTOX Knowledgebase, a database for ecotoxicology research. Neonicotinoids are a class of insecticides used widely in agriculture. The dataset that has been pulled includes all studies published on insects. Why might we be interested in the ecotoxicologoy of neonicotinoids on insects? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: Neonicotinoids are systemic chemicals absorbed into plants, and can be 
+present in pollen and nectar. These chemicals are less acutely toxic to mammals 
+and other vertebrates, but are highly toxic to pollinating insects.The 
+long-lasting presence of neonicotinoids in plants raise concerns on their 
+long-term impacts on pollinators.
 
 3. The Niwot Ridge litter and woody debris dataset was collected from the National Ecological Observatory Network, which collectively includes 81 aquatic and terrestrial sites across 20 ecoclimatic domains. 32 of these sites sample forest litter and woody debris, and we will focus on the Niwot Ridge long-term ecological research (LTER) station in Colorado. Why might we be interested in studying litter and woody debris that falls to the ground in forests? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: The process of decomposition releases the carbon in litter 
+and woody debris; hence studying these can give researchers insight into 
+carbon emissions and net primary productivity.
 
 4. How is litter and woody debris sampled as part of the NEON network? Read the NEON_Litterfall_UserGuide.pdf document to learn more. List three pieces of salient information about the sampling methods here: 
 
 > Answer: 
-*
-*
-*
+*Samples are collected in randomly selected tower plot locations.
+*The size and number of tower plots surveyed depend on the stature of
+vegetation, and other characteristics.
+*Ground traps and elevated traps are installed, which are surveyed in the former
+case, once a year; in the latter, more frequent intervals which are determined
+by the nature of the woodland, among other factors.
 
 
 
@@ -50,31 +69,37 @@ The completed exercise is due on <>.
 5. What are the dimensions of the dataset?
 
 ```{r}
-
+dim(Neonics) # there are 4,623 objects of 30 variables.
 ```
-
 6. Using the `summary` function on the "Effect" column, determine the most common effects that are studied. Why might these effects specifically be of interest?
 ```{r}
-
+summary(Neonics$Effect)  
 ```
 
-> Answer: 
+> Answer: The most studied effects are population (1803), followed by mortality
+(1493). This is likely because the researchers are most interested on the 
+impact of neonics on insect populations, and its consequences on mortality.
 
 7. Using the `summary` function, determine the six most commonly studied species in the dataset (common name). What do these species have in common, and why might they be of interest over other insects? Feel free to do a brief internet search for more information if needed.
 
 ```{r}
-
+summary(Neonics$Species.Group)
+summary(Neonics$Species.Common.Name)
 ```
 
-> Answer: 
+> Answer: The top six species include five bee species, indicating that the 
+researchers prioritize gaining insight into the effects on pollinators.
 
 8. Concentrations are always a numeric value. What is the class of Conc.1..Author. in the dataset, and why is it not numeric?
 
 ```{r}
-
+class(Neonics$Conc.1..Author.)
 ```
 
-> Answer:
+> Answer: The concentration class is a factor.It appears that it is not 
+considered to be numeric because some of the data includes characters, and 
+symbols like "/". The characters are presumably included to express "no result"
+or a related message.
 
 
 
@@ -82,11 +107,24 @@ The completed exercise is due on <>.
 
 9. Using `geom_freqpoly`, generate a plot of the number of studies conducted by publication year. 
 ```{r}
+p <- ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year), bins = 50
+  )
 
+print(p)
 ```
 
 10. Reproduce the same graph but now add a color aesthetic so that different Test.Location are displayed as different colors.
-```{r}
+```{r, fig.height = 3, fig.width = 4}
+#
+summary(Neonics$Test.Location)
+
+#
+p1 <- ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year, color = Test.Location), bins = 50) +
+  theme(legend.position = "top")
+
+print(p1)
 
 ```
 
@@ -96,11 +134,25 @@ Interpret this graph. What are the most common test locations, and do they diffe
 
 11. Create a bar graph of Endpoint counts. What are the two most common end points, and how are they defined? Consult the ECOTOX_CodeAppendix for more information. 
 
-```{r}
+```{r, fig.height=4, fig.width=10}
+#
+p3 <- ggplot(Neonics)+
+  geom_bar(aes(x= Endpoint))
+print(p3)
 
+#
+summary(Neonics$Endpoint)
 ```
 
-> Answer: 
+> Answer: The two most common endpoints are NOEL and LOEL:
+No observable effect level and lowest observable effect level.
+
+NOEL is an endpoint signifying that the highest dose (concentration) 
+produces effects not significantly different from responses of 
+control.
+
+LOEL is an endpoint signifying that the lowest dose (concentration) 
+produces effects that *were* significantly different from responses of controls.
 >
 
 ## Explore your data (Litter)
@@ -108,30 +160,52 @@ Interpret this graph. What are the most common test locations, and do they diffe
 12. Determine the class of collectDate. Is it a date? If not, change to a date and confirm the new class of the variable. Using the `unique` function, determine which dates litter was sampled in August 2018. 
 ```{r}
 
+#
+class(Litter$collectDate)
+
+#
+Litter$collectDate <- as.Date(Litter$collectDate, format = "%y/%m/%d")
 ```
 
 13. Using the `unique` function, determine how many plots were sampled at Niwot Ridge. How is the information obtained from `unique` different from that obtained from `summary`?
 
 ```{r}
+#
+unique(Litter$plotID, incomparables = FALSE)
 
+#
+summary(Litter$plotID)
 ```
 
-> Answer: 
+> Answer: The unique function tells us that there are 12 levels or types of 
+plots listed.
+The summary function organizes the data by a given plot - and is useful in
+determining *how many* data points exist for a given plot. 
 
 14. Create a bar graph of functionalGroup counts. This shows you what type of litter is collected at the Niwot Ridge sites. Notice that litter types are fairly equally distributed across the Niwot Ridge sites.
-```{r}
+```{r, fig.height= 4, fig.width= 10}
+#
+ggplot(Litter) +
+  geom_bar(aes(x= functionalGroup))
 
 ```
 
 15. Using `geom_boxplot` and `geom_violin`, create a boxplot and a violin plot of dryMass by functionalGroup. 
 ```{r}
+B <- ggplot(Litter)+
+  geom_boxplot(aes(x=functionalGroup, y=dryMass))
+print(B)
 
+C <- ggplot(Litter)+
+  geom_violin(aes(x=functionalGroup, y=dryMass))
+print(C)
 ```
 
 Why is the boxplot a more effective visualization option than the violin plot in this case?
 
-> Answer: 
+> Answer: The boxplot shares more insight that the violin plot, because the 
+data is widely distributed within categories. 
 
 What type(s) of litter tend to have the highest biomass at these sites? 
 
-> Answer: 
+> Answer: Needles tend to have the highest median biomass at these sites.
