--- a/Assignments/A04_DataWrangling.Rmd
+++ b/Assignments/A04_DataWrangling.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 4: Data Wrangling"
-author: "Student Name"
+author: "Abhay V Rao, section 4"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -25,8 +25,28 @@ The completed exercise is due on Monday, Feb 7 @ 7:00pm.
 
 ```{r, message = FALSE}
 #1
+getwd()
+library(tidyverse)
+library(lubridate)
+EPA_o3_2018 <- read.csv("../Data/Raw/EPAair_O3_NC2018_raw.csv", stringsAsFactors = TRUE)
+EPA_o3_2019 <- read.csv("../Data/Raw/EPAair_O3_NC2019_raw.csv", stringsAsFactors = TRUE)
+EPA_PM2.5_2018 <- read.csv("../Data/Raw/EPAair_PM25_NC2018_raw.csv", stringsAsFactors = TRUE)
+EPA_PM2.5_2019 <- read.csv("../Data/Raw/EPAair_PM25_NC2019_raw.csv", stringsAsFactors = TRUE)
 
 #2
+dim(EPA_o3_2018)
+dim(EPA_o3_2019)
+dim(EPA_PM2.5_2018)
+dim(EPA_PM2.5_2019)
+colnames(EPA_o3_2018)
+colnames(EPA_o3_2019)
+colnames(EPA_PM2.5_2018)
+colnames(EPA_PM2.5_2019)
+str(EPA_o3_2018)
+str(EPA_o3_2019)
+str(EPA_PM2.5_2018)
+str(EPA_PM2.5_2019)
+
 ```
 
 ## Wrangle individual datasets to create processed files.
@@ -37,20 +57,39 @@ The completed exercise is due on Monday, Feb 7 @ 7:00pm.
 
 ```{r}
 #3
+EPA_o3_2018$Date <- as.Date(EPA_o3_2018$Date, "%m/%d/%y")
+EPA_o3_2019$Date <- as.Date(EPA_o3_2019$Date, "%m/%d/%y")
+EPA_PM2.5_2018$Date <- as.Date(EPA_PM2.5_2018$Date,"%m/%d/%y")
+EPA_PM2.5_2019$Date <- as.Date(EPA_PM2.5_2019$Date, "%m/%d/%y")
+
+class(EPA_o3_2018$Date)
+class(EPA_o3_2019$Date)
+class(EPA_PM2.5_2018$Date)
+class(EPA_PM2.5_2019$Date)
 
 #4
+EPA_o3_2018_subset <- select(EPA_o3_2018, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
+EPA_o3_2019_subset <- select(EPA_o3_2019, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
+EPA_PM2.5_2018_subset <- select(EPA_PM2.5_2018, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
+EPA_PM2.5_2019_subset <- select(EPA_PM2.5_2019, Date, DAILY_AQI_VALUE, Site.Name, AQS_PARAMETER_DESC, COUNTY, SITE_LATITUDE, SITE_LONGITUDE)
 
 #5
+EPA_PM2.5_2018_subset$AQS_PARAMETER_DESC <- "PM2.5" 
+EPA_PM2.5_2019_subset$AQS_PARAMETER_DESC <- "PM2.5" 
 
 #6
+write.csv(EPA_o3_2018_subset, row.names = FALSE, file = "../Data/Processed/EPAair_O3_NC2018_processed")
+write.csv(EPA_o3_2019_subset, row.names = FALSE, file = "../Data/Processed/EPAair_O3_NC2019_processed")
+write.csv(EPA_PM2.5_2018_subset, row.names = FALSE, file = "../Data/Processed/EPAair_PM25_NC2018_processed")
+write.csv(EPA_PM2.5_2019_subset, row.names = FALSE, file = "../Data/Processed/EPAair_PM25_NC2019_processed")
+
 
 ```
 
 
 ## Combine datasets
 7. Combine the four datasets with `rbind`. Make sure your column names are identical prior to running this code. 
-8. Wrangle your new dataset with a pipe function (%>%) so that it fills the following conditions: 
-
+8. Wrangle your new dataset with a pipe function (%>%) so that it fills the following conditions:
 * Filter records to include just the sites that the four data frames have in common: "Linville Falls", "Durham Armory", "Leggett", "Hattie Avenue", "Clemmons Middle", "Mendenhall School", "Frying Pan Mountain", "West Johnston Co.", "Garinger High School", "Castle Hayne", "Pitt Agri. Center", "Bryson City", "Millbrook School". (The `intersect` function can figure out common factor levels if we didn't give you this list...)
 * Some sites have multiple measurements per day. Use the split-apply-combine strategy to generate daily means: group by date, site, aqs parameter, and county. Take the mean of the AQI value, latitude, and longitude.
 * Add columns for "Month" and "Year" by parsing your "Date" column (hint: `lubridate` package)
@@ -62,14 +101,36 @@ The completed exercise is due on Monday, Feb 7 @ 7:00pm.
 
 ```{r}
 #7
+colnames(EPA_o3_2018_subset)
+colnames(EPA_o3_2019_subset)
+colnames(EPA_PM2.5_2018_subset)
+colnames(EPA_PM2.5_2019_subset)
+
+EPA_o3_PM2.5_2018_2019 <- rbind(EPA_o3_2018_subset, EPA_o3_2019_subset, EPA_PM2.5_2018_subset, EPA_PM2.5_2019_subset)
+
+dim(EPA_o3_PM2.5_2018_2019)
 
 #8
+EPA_o3_PM2.5_2018_2019_Common_Sites <- EPA_o3_PM2.5_2018_2019 %>%
+  filter(Site.Name %in% c("Linville Falls", "Durham Armory", "Leggett", "Hattie Avenue", "Clemmons Middle", "Mendenhall School", "Frying Pan Mountain", "West Johnston Co.", "Garinger High School", "Castle Hayne", "Pitt Agri. Center", "Bryson City", "Millbrook School")) %>%
+  group_by(Date, Site.Name, AQS_PARAMETER_DESC, COUNTY) %>%
+  summarise(meanAQI = mean(EPA_o3_PM2.5_2018_2019$DAILY_AQI_VALUE), 
+            meanLat = mean(EPA_o3_PM2.5_2018_2019$SITE_LATITUDE), 
+            meanLong = mean(EPA_o3_PM2.5_2018_2019$SITE_LONGITUDE)) %>%
+  mutate(Month = month(Date)) %>%
+  mutate(Year = year(Date))
+
+dim(EPA_o3_PM2.5_2018_2019_Common_Sites)
 
 #9
 
+EPA_o3_PM2.5_2018_2019_Common_Sites_2 <- pivot_wider(EPA_o3_PM2.5_2018_2019_Common_Sites, names_from = AQS_PARAMETER_DESC, values_from = meanAQI)
+
 #10
+dim(EPA_o3_PM2.5_2018_2019_Common_Sites_2)
 
 #11
+write.csv(EPA_o3_PM2.5_2018_2019_Common_Sites_2, row.names = FALSE, file = "../Data/Processed/EPAair_O3_PM25_NC2122_Processed.csv")
 
 ```
 
@@ -84,10 +145,17 @@ The completed exercise is due on Monday, Feb 7 @ 7:00pm.
 
 ```{r}
 #12(a,b)
-
+EPA_o3_PM2.5_2018_2019_Summary1 <-
+  EPA_o3_PM2.5_2018_2019_Common_Sites_2 %>%
+  group_by(Site.Name, Month, Year) %>%
+  summarise(mean.AQI.Ozone = mean(Ozone), 
+            mean.AQI.PM2.5 = mean(PM2.5)) %>%
+  drop_na(mean.AQI.Ozone, mean.AQI.PM2.5)
+  
+filter(!is.na(mean.AQI.Ozone) & !is.na(mean.AQI.PM2.5))
 
 #13
-
+dim(EPA_o3_PM2.5_2018_2019_Summary1)
 ```
 
 14. Why did we use the function `drop_na` rather than `na.omit`?
