--- a/Lessons/04_Lab_DataWrangling.Rmd
+++ b/Lessons/04_Lab_DataWrangling.Rmd
@@ -17,9 +17,11 @@ editor_options:
 
 Today we will work with a dataset from the [North Temperate Lakes Long-Term Ecological Research Station](https://lter.limnology.wisc.edu/about/overview). The NTL-LTER is located in the boreal zone in northern Wisconsin, USA. We will use the [chemical and physical limnology dataset](https://lter.limnology.wisc.edu/content/cascade-project-north-temperate-lakes-lter-core-data-physical-and-chemical-limnology-1984), running from 1984-2016. 
 
+Comment1: Understand the difference between the | and & symbol; and git hygiene 
+
 Opening discussion: why might we be interested in long-term observations of temperature, oxygen, and light in lakes?
 
-> Add notes here: 
+> Add notes here: They have messed with biota in Peter Lake but not in the other. Have a look at the metadata for more.
 
 ```{r, message = FALSE}
 getwd()
@@ -44,11 +46,12 @@ class(NTL.phys.data$lakeid)
 class(NTL.phys.data$depth)
 
 # dplyr filtering
-NTL.phys.data.surface <- filter(NTL.phys.data, depth == 0)
+NTL.phys.data.surface <- filter(NTL.phys.data, depth == 0) # double equal sign
 
 # Choose multiple conditions to filter
-summary(NTL.phys.data$lakename)
+summary(NTL.phys.data$lakename) # you can also get a sense of how many fields by using unique and levels - as we used stringsAsFactors
 NTL.phys.data.PeterPaul <- filter(NTL.phys.data, lakename %in% c("Paul Lake", "Peter Lake"))
+# gives us peter or paul values
 
 # Choose a range of conditions of a numeric or integer variable
 summary(NTL.phys.data$daynum)
@@ -57,11 +60,12 @@ NTL.phys.data.JunethruOctober <- filter(NTL.phys.data, daynum %in% c(152:304))
 # Exercise 1: 
 # filter NTL.phys.data for the year 1999
 # what code do you need to use, based on the class of the variable?
-
+class(NTL.phys.data$year4)
+Exercise1 <- filter(NTL.phys.data,year4==1999)
 
 # Exercise 2: 
 # filter NTL.phys.data for Tuesday Lake from 1990 through 1999.
-
+Exercise2 <- filter(NTL.phys.data,year4 %in% (1990:1999) & lakename == "Tuesday Lake")
 
 ```
 Question: Why don't we filter using row numbers?
@@ -83,13 +87,18 @@ NTL.phys.data.processed <-
 
 #Exercise 3: Using a pipe filter NTL.phys.data for Tuesday Lake from 1990 through 1999 only for July 
 
-
-
-
-
+Exercise3 <- NTL.phys.data %>%
+  filter(year4 %in% 1990:1999) %>%
+  filter(lakename=="Tuesday Lake") %>%
+  mutate(month = month(sampledate)) %>%
+  filter(month==7)
+  
 #Exercise 4: Using the data from part 3, a pipe and the summarise() function find the mean surface temperature (hints: you will need to add another filter for depth==0). Make sure you eliminate NAs before computing the means
 
-  
+Exercise4 <- NTL.phys.data %>%
+  filter(depth==0) %>%
+  filter(!is.na(temperature_C)) %>%
+  summarise (mean = mean(temperature_C))
 ```
 
 ## Gather and Spread
@@ -98,7 +107,7 @@ For gather we will use `pivot_longer` and for spread we will use `pivot_wider`.
 
 ```{r}
 #Exercise 5: gather irradiance data (measured in the water column and measured on the deck of the sampling boat) into one column using pivot_longer
-
+Exercise5 <- pivot_longer(NTL.phys.data,9, names_to = "nutrient", values_to = "concentration")
 
 #Exercise 6: spread temperatureC into more than one column based on the depth
 
