--- a/Assignments/A05_DataVisualization.Rmd
+++ b/Assignments/A05_DataVisualization.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 5: Data Visualization"
-author: "Student Name"
+author: "Abhay V Rao"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -34,14 +34,35 @@ the processed data file for the Niwot Ridge litter dataset (use the [`NEON_NIWO_
 ```{r}
 #1 
 
-#2 
+getwd()
+library(tidyverse)
+library(cowplot)
 
+PeterPaul.A05 <- 
+  read.csv("./Data/Processed/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv",
+           stringsAsFactors = TRUE)
+
+Litter.A05 <- 
+  read.csv("./Data/Processed/NEON_NIWO_Litter_mass_trap_Processed.csv", 
+           stringsAsFactors = TRUE)
+
+#2 
+class(PeterPaul.A05$sampledate)
+PeterPaul.A05$sampledate <- as.Date(PeterPaul.A05$sampledate, format = "%Y-%m-%d")
 ```
 ## Define your theme
 3. Build a theme and set it as your default theme.
 
 ```{r}
 #3
+
+mytheme <- theme_gray(base_size = 10) +
+  theme(axis.text = element_text(color = "darkgrey"), 
+        legend.position = "bottom")
+
+
+#Setting the theme
+theme_set(mytheme)
 
 ```
 
@@ -52,20 +73,65 @@ For numbers 4-7, create ggplot graphs and adjust aesthetics to follow best pract
 
 ```{r}
 #4
+PeterPaul.tpug.po4 <- 
+  ggplot(PeterPaul.A05, aes(x = tp_ug, y = po4)) +
+  geom_point(color = "skyblue") +
+  xlim(0, 150) + 
+  ylim(0, 50)+
+  geom_smooth(method = lm, color = "black") +
+  facet_wrap(vars(lakename), nrow = 2) +
+  xlab("Phosphorus")+
+  ylab("Phosphate")
+print(PeterPaul.tpug.po4)
 
 ```
 
-
 5. [NTL-LTER] Make three separate boxplots of (a) temperature, (b) TP, and (c) TN, with month as the x axis and lake as a color aesthetic. Then, create a cowplot that combines the three graphs. Make sure that only one legend is present and that graph axes are aligned.
 
-```{r}
+```{r, fig.height = 7, fig.width = 6}
 #5
+
+#Changing month data to factors from integers
+PeterPaul.A05$month <- as.factor(PeterPaul.A05$month)
+class(PeterPaul.A05$month)
+
+#Generating boxplots for temp, tp and tn. Not printed, to reduce clutter.
+PeterPaulTemp <-
+  ggplot(PeterPaul.A05, aes(x = month, y = temperature_C, color = lakename)) +
+  geom_boxplot()
+
+PeterPaulTP <-
+  ggplot(PeterPaul.A05, aes(x = month, y = tp_ug, color = lakename)) +
+  geom_boxplot()
+
+PeterPaulTN <-
+  ggplot(PeterPaul.A05, aes(x = month, y = tn_ug, color = lakename)) +
+  geom_boxplot()
+
+#Creating a cowplot with all three boxplots with all legends removed.
+PeterPaulrow <- plot_grid(
+  PeterPaulTemp + theme(legend.position="none"),
+  PeterPaulTP + theme(legend.position="none"),
+  PeterPaulTN + theme(legend.position="none"),
+  align = 'vh',
+  nrow = 3
+)
+
+#Extracting the legend for boxplot 1
+legend <- get_legend(PeterPaulTemp)
+
+#Creating a cowplot with the legend plotted
+plot_grid(PeterPaulrow, legend, nrow = 2 ,rel_heights = c(10,1))
+
 
 ```
 
 Question: What do you observe about the variables of interest over seasons and between lakes? 
 
-> Answer: 
+> Answer: Temperatures tended to be higher for most of the year in Paul lake, 
+with the trend shifting with the onset of cold weather in the fall. 
+Phosphorus and phosphate measurements, in terms of medians and the top end of 
+outliers, were consistently higher in Peter lake.
 
 6. [Niwot Ridge] Plot a subset of the litter dataset by displaying only the "Needles" functional group. Plot the dry mass of needle litter by date and separate by NLCD class with a color aesthetic. (no need to adjust the name of each land use)
 
@@ -74,10 +140,34 @@ Question: What do you observe about the variables of interest over seasons and b
 ```{r}
 #6
 
-#7
+#Filtering 'Needles' from the dataset
 
+Needles <- 
+  Litter.A05 %>%
+  filter(functionalGroup %in% c("Needles"))
+
+class(Needles$collectDate)
+Needles$collectDate <- as.Date(Needles$collectDate, format = "%Y-%m-%d")
+
+class(Needles$dryMass)
+
+#Plotting dry mass by date, separated by NLCD class
+Needles_dryMass_Date_NLCD_Color <- 
+  ggplot(Needles)+
+  geom_point(aes(x= collectDate, y= dryMass, color = nlcdClass))
+print(Needles_dryMass_Date_NLCD_Color)
+  
+#7
+Needles_dryMass_Date_NLCD_Facet <- 
+  ggplot(Needles)+
+  geom_point(aes(x= collectDate, y= dryMass))+
+  facet_wrap(vars(nlcdClass), nrow = 3)
+  
+print(Needles_dryMass_Date_NLCD_Facet)
 
 ```
 Question: Which of these plots (6 vs. 7) do you think is more effective, and why? 
 
-> Answer:
+> Answer: The second plot provides an easier visualization of data across NLCD
+classes. The first one is comparatively cluttered, and it is difficult to 
+observe trends relating to litter across different land-use areas at a glance.
