--- a/Lessons/05_Lab_DataVisualization.Rmd
+++ b/Lessons/05_Lab_DataVisualization.Rmd
@@ -22,7 +22,7 @@ The expression function can be used when you want to add mathematical symbols an
 Plot_text <-
 ggplot(data=data.frame(x=0,y=0))+
   geom_point(aes(x=x,y=y)) +
-  geom_text(x=0,y=0.025,label=expression(paste("Mean is ", mu,",", R^{2},'=0.6')))
+  geom_text(x=0,y=0.025,label=expression(paste("Mean is ", degree,",", R[2],'=0.6')))
 print(Plot_text)
 
 ggsave("./Output/Plot_text.jpg",Plot_text, height = 4, width = 6, units = "in", dpi = 300)
@@ -53,12 +53,24 @@ PeterPaul.chem.nutrients$sampledate <- as.Date(PeterPaul.chem.nutrients$sampleda
 
 Exercise: build your own scatterplots of PeterPaul.chem.nutrients
 
-```{r, fig.height = 3, fig.width = 4, warning = FALSE}
+```{r, fig.height = 3, fig.width = 10, warning = FALSE}
 
 # 1. 
 # Plot surface temperatures by day of  year. 
 # Color your points by year, and facet by lake in two rows.
 # Change the ylab name
+PeterPaulplot1 <-
+  ggplot(PeterPaul.chem.nutrients, aes(x = daynum, y = temperature_C, color = as.factor(year4))) +
+  geom_point() +
+  facet_wrap(vars(lakename), nrow = 2)
+print(PeterPaulplot1)
+
+PeterPaulplot2 <-
+  ggplot(filter(PeterPaul.chem.nutrients,depth==0)) + 
+  geom_point(aes(x = daynum, y = temperature_C, color=year4) +
+  facet_wrap('lakename'))
+  ylab('Temperature(C)')
+print(PeterPaulplot2)
 
 
 #2. 
@@ -67,6 +79,11 @@ Exercise: build your own scatterplots of PeterPaul.chem.nutrients
 # Change the color palette to magma and play with direction (+- 1), which one makes more sense?
 # Change x axis to include marker/labels every 5 years
 
+PeterPaulplot2 <-
+  ggplot(PeterPaul.chem.nutrients, aes(x = sampledate, y = temperature_C, color = as.factor(depth))) +
+  geom_point() +
+  facet_wrap(vars(lakename), nrow = 2)
+print(PeterPaulplot2)
 
 
 
@@ -82,9 +99,13 @@ Exercise: Plot relationships between air quality measurements
 # Make the points 50 % transparent
 # Add a line of best fit for the linear regression of these variables.
 
+Exercise3 <-
+  ggplot(EPAair, aes(x = PM2.5, y = Ozone, color = meanLat)) +
+  geom_point(alpha = 0.1) +
+    geom_smooth(method = lm)
+print(Exercise3)
 
-
-
+# WELL DONE BISH
 ```
 
 ## Plotting continuous vs. categorical variables
@@ -96,8 +117,11 @@ Exercise: Plot distributions of AQI values for EPAair.
 # 4. 
 # Create several types of plots depicting PM2.5, divided by year. 
 # Choose which plot displays the data best and justify your choice. 
-
-
+Exercise4 <-
+ggplot(EPAair, aes(x=PM2.5))+
+  geom_histogram()+
+  facet_wrap('Year')
+print(Exercise4)
 
 ```
 
