--- a/Lessons/07_Lab_TimeSeries.Rmd
+++ b/Lessons/07_Lab_TimeSeries.Rmd
@@ -56,8 +56,8 @@ Temp_BR <- read.csv("./Data/Raw/tas_1901_2016_BRA.csv", stringsAsFactors = TRUE)
 Rainfall_BR_processed <-
   Rainfall_BR %>% 
   rename( Rainfall = Rainfall....MM.) %>% 
-  separate(Statistics,c("Null","Month","Null2")," ") %>% 
-  mutate( Date = my(paste0(Month,"-",Year))) %>% 
+  separate(Statistics,c("Null","Month","Null2")," ") %>% #like text to columns in excel. First column null, second column has the month, the second one just says average, so we call it null2
+  mutate( Date = my(paste0(Month,"-",Year))) %>% #paste0 concatenates month and year 
   select(Date,Rainfall)
 
 #Exercise 3: Repeat exercise 2 to the temperature dataset.
@@ -68,6 +68,7 @@ Temp_BR_processed <-
   mutate( Date = my(paste0(Month,"-",Year))) %>% 
   select(Date,Temperature_C)  
 
+#column bind shouldn't used in TSA
 
 #Exercise 4: Join the temperature and rainfall into one tidy data frame with 3 columns: Date, Rainfall and Temperature.
 BRA_complete <- inner_join(Rainfall_BR_processed,Temp_BR_processed)
@@ -81,15 +82,21 @@ BRA_complete <- inner_join(Rainfall_BR_processed,Temp_BR_processed)
 ```{r}
 
 #Exercise 5: Check if there is any missing data for both temperature and rainfall series.
-
-
+summary(Rainfall_BR_processed)
+summary(Temp_BR_processed)
 
 
 #Exercise 6: Plot both series over time on separate plots. Add a trend line using geom_smooth(). Can you say something about the trend just by visualizing the data?
 
+ggplot(Rainfall_BR_processed, aes(x = Date, y = Rainfall)) +
+  geom_line() +
+  geom_smooth(method= "lm")
+  labs(x = "Date", y = "Rainfall")
 
-
-
+ggplot(Temp_BR_processed, aes(x = Date, y = Temperature_C)) +
+  geom_line() +
+  geom_smooth(method= "lm")
+  labs(x = "Date", y = "Temperature (C)")
 
 
 ```
@@ -99,7 +106,12 @@ BRA_complete <- inner_join(Rainfall_BR_processed,Temp_BR_processed)
 ```{r}
 #Exercise 7: Create a time series objects for each series using ts(). Make sure you specify the starting point and frequency.
 
+fmonth <- month(first(BRA_complete$Date))
+fyear<- year(first(BRA_complete$Date))
 
+
+Rainfall_TS <- ts(BRA_complete$Rainfall, start(fyear,fmonth),frequency=12)
+Temp_TS <- ts(BRA_complete$Temperature_C, start(fyear,fmonth),frequency=12)
 
 ```
 
@@ -121,15 +133,19 @@ The `stl` function decomposes the time series object into its component parts. W
 # Exercise 8: Use the stl() function to decompose both series. 
 # Visualize the decomposed series using plot(). What components can you identify?
 
+Rainfall_TS_decomposed <- stl(Rainfall_TS, s.window = "periodic")
+Temp_TS_decomposed <- stl(Temp_TS, s.window = "periodic")
 
+plot(Rainfall_TS_decomposed)
 
-
+plot(Temp_TS_decomposed)
 
 
 # Exercise 9: Use the times series object generated with the stl() to extract the 
 # components of each series and turn them into data frames.
 
-
+Rainfall_Components <- as.data.frame(Rainfall_TS_decomposed$time.series[,1:3])
+Temp_Components <- as.data.frame(Temp_TS_decomposed$time.series[,1:3])
 
 
 
