--- a/Lessons/08_Lab_SpatialAnalysis.Rmd
+++ b/Lessons/08_Lab_SpatialAnalysis.Rmd
@@ -18,6 +18,18 @@ editor_options:
  * Projections & Coordinate reference systems
  * Visualization techniques
 
+Note: Google R SF cheat sheet 
+
+Simple feature, coordinate pair, coordinate reference system
+
+Lat-long pertains to locations but doesn't work well for calculations for distance etc. Lat-long is an angular unit of measure. So we convert them into planar units using projection. 
+
+UTM - Universal Transverse Mercator: Makes longitudinal slices that conserve accuracy within the given slice.
+
+EPSG numbers - catalog of coordinate systems
+
+sv_transform (I think) - helps us change coordinate systems
+
 3. Spatial Analysis Exercises
  * Reading data into spatial dataframes
  * Data aggregation
@@ -72,19 +84,21 @@ counties_sf<- st_read('./Data/Spatial/cb_2018_us_county_20m.shp') %>%
 
 #
 mapView(counties_sf, zcol = "AWATER")
+
 ```
 
 ### EXERCISE 2.2.1: Read in and explore 8-digit HUC watersheds for NC
+
+Note: HUC is pertains to hydrological drainage. an eight digit HUC is a very specific area; fewer digits pertain to a larger region
 
 *Now you try*: Read in the NC 8-Digit HUC dataset: `./Data/Spatial/NCHUC8.shp` into a variable named `huc8_sf`. What CRS does this dataset use? Is it the same as the counties dataset? What columns are included in this dataset? What do these features look like on a map?
 
 ```{r read HUCs shapefile}
 #Read the shapefile into an sf dataframe named "huc8_sf"
-
-
+HUC8_sf <- st_read('./Data/Spatial/NCHUC8.shp')
 
 #View the data as a map, colored by the acreage in each
-
+mapview(HUC8_sf, zcol = 'ACRES')
 
 ```
 
@@ -94,7 +108,16 @@ mapView(counties_sf, zcol = "AWATER")
 
 ```{r Select the Upper Neuse HUC 8}
 #Read the shapefile into an sf dataframe
+HUC8_sf_filtered <- st_read('./Data/Spatial/NCHUC8.shp') %>%
+    filter(SUBBASIN == 'Upper Neuse')
 
+
+#View the data as a map, colored by the acreage in each
+mapview(HUC8_sf_filtered, zcol = 'ACRES')
+
+ggplot()+
+  geom_sf(data=HUC8_sf,fill='grey')+
+  geom_sf(data=HUC8_sf_filtered, fill='darkgreen')
 
 
 #Create a map
@@ -114,17 +137,24 @@ The URL '<https://raw.githubusercontent.com/ENV859/EnviroAtlasData/main/Wind_Ene
 
 ```{r}
 #Compute HUC8 wind energy
+wind_raw <- read.csv('https://raw.githubusercontent.com/ENV859/EnviroAtlasData/main/Wind_Energy.csv', colClasses = c('HUC_12'='factor')) %>%
+  mutate(HUC_8 = substr(HUC_12,1,8)) %>%
+  group_by(HUC_8) %>%
+  summarize(windpower = sum(AvgWindEnergy))
 
-
+#in order to not drop the 0 from the HUC, we need to do some additional massaging. substr helps us choose a part of a string
 
 
 #Join to HUC_8 features
-
-
+huc8_wind <- merge(x = HUC8_sf,
+                   y=wind_raw,
+                   by.x='HUC_8',
+                   by.y='HUC_8')
 
 
 #View the outputs
-
+ggplot(huc8_wind)+
+  geom_sf(data="huc8_wind")
 
 
 ```
